Update all the elements to recreate CSS

--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -1,308 +1,189 @@
-body {
-    font-family: 'Comic Sans MS'; /*here*/
-    padding: auto;
-    /*
-  height: 100vmin;
-  width: 100vmin;
-  */
-    height: 100vmin; /*here*/
-    width: 100vmin;
+html {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    margin: 0;
+}
 
-    border: 30px solid transparent;
+body {
+    box-sizing: border-box; /*border does not adds extra width or height*/
+    border: 10px solid transparent;
     border-image: url(111.png) 90 round;
-}
-
-#container { /*here*/
-    margin: auto;
-    position: absolute;
-    /*
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 10px;
-        */
-    border: dotted black 10px;
-    height: 20vmin;
-    width: 97vmin;
-}
-
-canvas { /*here*/
-    width: 100vmin;
     height: 100vmin;
+    width: 100vmin;
+    position: relative;
 }
 
-div {
-  text-align: center;
-  font-size: 100%;
-}
-@media screen and (max-width: 730px) {
-    div{
-        font-size:70%;
-    }
-}
-
-.count {
-    position: absolute;
-    width: 25%;
-    height: 80%;
-    margin: auto auto auto auto;
-    border: 1px solid #808080;
-    border-width: 4px 5px 4px 6px;
-    border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
-    font-size: 200%;
-    background-color: white;
-    text-align: center;
-    font-weight: bold;
-    border: 10px solid lightyellow;
-    border-radius: 20px;
-}
-
-.videocanvas {
-    
-  top: auto;
-  right: 0;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  width: 25%;
-  height: 80%;
-  border: 10px solid lightyellow;
-  border-radius: 20px;
-}
-
-.info {
-  font-size: 100%;
-  position: relative; /*here*/
-  text-align: center;
-  width: 100%;
-  display: block;
-}
-
-h3 {
-  top: 0;
-  left: 100px;
-  position: absolute;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 25px;
-  letter-spacing: -0.2px;
-  word-spacing: 0px;
-  color: #ffffff;
-  font-weight: 700;
-  text-decoration: none;
-  font-style: normal;
-  font-variant: normal;
-  text-transform: none;
-  display: none;
-}
-
-.tmLogo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: auto;
-  height: auto;
-}
-
-#dogcenter {
-  display: none;
-  margin-left: auto;
-  margin-right: auto;
-  width: 70%;
-}
-
-#catcenter {
-  display: none;
-  margin-left: auto;
-  margin-right: auto;
-  width: 70%;
-}
-
-.button {
-  box-shadow: 0px 1px 0px 0px #f0f7fa;
-  background: linear-gradient(to bottom, #ff9e67 5%, #ff9e67 100%);
-  background-color: #ff9e67;
-  border-radius: 6px;
-  border: 1px solid #ff9e67;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 150%;
-  font-weight: bold;
-  text-decoration: none;
-  text-shadow: 0px -1px 0px #5b6178;
-  width: 40%;
-  height: 20%;
-}
-
-.button:hover {
-  background: linear-gradient(to bottom, #fffde3 5%, #fffde3 100%);
-  background-color: #fffde3;
-  color: black;
-}
-
-.button:active {
-  position: relative;
-  top: 1px;
-}
-
-.splashT {
-    margin: auto; /*here*/
-  z-index: 1;
-  left: 0;
-  top: 0;
-  position: absolute;
-  width: 100%; /*here*/
-  height: 100%;
-  background-color: transparent; /*here*/
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-#splash-text { /*here*/
-    color:black;
-    font-family:'Comic Sans MS';
+p {
+    font-family: 'Comic Sans MS';
     font-size: 100%;
+    text-align: center;
 }
 
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  padding-top: 60px;
-
-  font-size: 300%;
+#gui-container {
+    background-color: blanchedalmond;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 25% 46% 29%;
+    grid-template-rows: 20% 80%;
+    grid-gap: 10px;
 }
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 40% auto 20% auto; /* 5% from the top, 15% from the bottom and centered */
-  border: 1px solid #808080;
-  border-width: 4px 5px 4px 6px;
-  border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
-  transform: rotate(0.85deg);
-  width: 100%; /* Could be more or less, depending on screen size */
-  height: 50%;
+.container-item1 {
+    background-color: darkorange;
+    box-sizing: border-box;
+    border: 5px solid cyan;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
 }
 
-/*
-.container {
-  padding: 16px;
+.container-item2 {
+    background-color: darkred;
+    box-sizing: border-box;
+    border: 5px solid cyan;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: auto;
 }
-*/
 
-.animate {
-  -webkit-animation: animatezoom 0.6s;
-  animation: animatezoom 0.6s;
+.container-item3 {
+    background-color: greenyellow;
+    box-sizing: border-box;
+    border: 5px solid cyan;
+    display: flex;
+    width: calc(100% - 20px);
+    height: auto;
 }
 
+.container-item4 {
+    background-color: mediumpurple;
+    box-sizing: border-box;
+    border: 5px solid cyan;
+    grid-column: span 3;
+    display: flex;
+    width: calc(100% - 20px);
+    height: calc(100% - 10px);
+}
 
+#vcanvas {
+    width: 100%;
+    height: auto;
+}
 
-@media (orientation: landscape) {
-  /*
-  .videocanvas {
-    min-width: 15%;
-    height: 17% !important; /*here
-    position: absolute;
-    right: 0;
-  }
-  */
-
-  /*
-  .lineHorizontal {
-      position: absolute;
-    margin-top: 145px !important;
-  }
-  */
-  #loading {
-    width: 20% !important; /*here*/
-  }
-
-  #catty {
-    width: 80% !important;
-    margin-left: 10%;
-    margin-top: 5% !important;
-  }
-
-  #doggy {
-    width: 80% !important;
-    margin-left: 10%;
-    margin-top: 5% !important;
-  }
-
-  #splash-text {
-    margin-bottom: 0;
-  }
+#canvas {
+    width: 100%;
+    height: auto
 }
 
 video {
-  /*transform: scaleX(-1);*/
-  display: none;
+    display: none;
 }
 
-.info {
-  font-size: 300%;
-  position: absolute;
-  text-align: center;
-  width: 100%;
+.splashT {
+    background-color: white;
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /*alternate centering method
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    */
 }
 
-#doggy {
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  margin-top: 40%;
+#loading {
+    width: 30%;
+    height: 30%;
 }
 
-#catty {
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  margin-top: 40%;
+#dogcenter {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
-/*
-@media screen and (max-width: 730px) {
-    #loading {
-        width: 20% !important; /*here
+
+#catcenter {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+/*Contents below yet to be modified*/
+
+.button {
+    box-shadow: 0px 1px 0px 0px #f0f7fa;
+    background: linear-gradient(to bottom, #ff9e67 5%, #ff9e67 100%);
+    background-color: #ff9e67;
+    border-radius: 6px;
+    border: 1px solid #ff9e67;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 150%;
+    font-weight: bold;
+    text-decoration: none;
+    text-shadow: 0px -1px 0px #5b6178;
+    width: 40%;
+    height: 20%;
+}
+
+    .button:hover {
+        background: linear-gradient(to bottom, #fffde3 5%, #fffde3 100%);
+        background-color: #fffde3;
+        color: black;
     }
 
-  .count {
-    font-size: 150%;
-  }
+    .button:active {
+        position: relative;
+        top: 1px;
+    }
 
-  .info {
-    font-size: 200%;
-  }
-
-  .modal-content {
-    width: 40%;
-    height: 40%;
-    font-size: 50%;
-  }
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    padding-top: 60px;
+    font-size: 300%;
 }
-*/
 
-/*
-.lineHorizontal__container {
-  align-items: center;
+.modal-content {
+    background-color: #fefefe;
+    margin: 40% auto 20% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #808080;
+    border-width: 4px 5px 4px 6px;
+    border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
+    transform: rotate(0.85deg);
+    width: 100%; /* Could be more or less, depending on screen size */
+    height: 50%;
 }
-*/
 
-/*
-.lineHorizontal {
-  border-top: 10px dotted black;
-  position: absolute;
-  margin-top: 270px;
-  width: 100%; 
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s;
 }
-*/
