--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -35,7 +35,7 @@ p {
 .container-item1 { /* timer container */
     background-color: azure;
     box-sizing: border-box;
-    border: 5px dashed black;
+    border: 5px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,7 +46,7 @@ p {
 .container-item2 { /* status container */
     background-color: azure;
     box-sizing: border-box;
-    border: 5px dashed black;
+    border: 5px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,7 +57,7 @@ p {
 .container-item3 { /* video canvas/vcanvas container */
     background-color: azure;
     box-sizing: border-box;
-    border: 5px dashed black;
+    border: 5px solid black;
     display: flex;
     width: calc(100% - 20px); /* 20px is the border width */
     height: auto;
