--- a/find-the-invisible-dog/rules.css
+++ b/find-the-invisible-dog/rules.css
@@ -1,77 +1,163 @@
+html {
+	height: 100vh; /* viewport height = 100%, adjustment not recommended */
+	width: 100vw; /* viewport width = 100%, adjustment not recommended */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+	background-color: black;
+}
 
+body {
+	background-color: #FCE5B0;
+	/*
+	background-image: url(<?php echo "images/".$row['image'];
+	?>);
+	background-size: 100px 90px;
+	background-repeat: repeat-y;
+	background-position: left;
+	*/
+	box-sizing: border-box; /* border does not adds extra width or height */
+	border: 20px solid transparent;
+	border-image: url(111.png) 90 round;
+	height: 100vmin; /* minimum viewport 100%, can be adjusted */
+	width: 100vmin;
+	position: relative;
+}
+
+::-webkit-scrollbar {
+	width: 0px;
+	background: transparent;
+}
+
+.title {
+	width: 100%;
+	height: 20%;
+	font-size: 300%;
+	font-family: font1;
+	letter-spacing: 3px;
+	word-spacing: 10px;
+	text-align: center;
+	margin: auto;
+}
+
+#dogLogo {
+	display: block;
+	margin: auto;
+	width: 20%;
+}
+
+p {
+	font-size: 250%;
+	font-family: font2;
+	word-spacing: 5px;
+}
+
+img {
+	width: 50%;
+	height: 50%;
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	overflow: scroll;
+}
+
+.rules {
+	width: 100%;
+	height: 100%;
+	margin: auto;
+	text-align: center;
+	display: block;
+}
+
+.scroll-down {
+	width: 10%;
+	height: 10%;
+	border: 5px black solid;
+	background-color: white;
+	color: white;
+	position: absolute;
+	bottom: 5%;
+	right: 5%;
+	z-index: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.scroll-down > img {
+	width: 100%;
+	height: 100%;
+}
+  
 @font-face {
   font-family: font1;
   src: url(ft1.ttf);
 }
-.title
-{
-font-size:150px;
-font-family:font1;
-letter-spacing:3px;
-word-spacing:10px;
-text-align:center;
-margin-top:3%;
-margin-left:4%;
-}
 
-#lg
-{
-font-size:50px;
-font-family:font1;
-letter-spacing:3px;
-word-spacing:10px;
-text-align:center;
-}
-
-.rules
-{
-margin-left:13%;
-}
 
 @font-face {
   font-family: font2;
   src: url(ft2.ttf);
 }
 
-p
-{
-font-size:430%;
-font-family:font2;
-word-spacing:5px;
-}
-
-.ls{
-margin-left:7%;
-font-size:50px;
-font-family:font2;
-word-spacing:5px;
+.ls {
+	height: 20%;
+	font-family: font2;
+	word-spacing: 5px;
+	margin-bottom: 3%;
+	margin-left: 5%;
+	margin-right: 5%;
 }
 
 #btn
-{
-margin-top:0%;
-margin-left:35%;
-margin-bottom:3%;
-width:250px;
-height:110px;
-font-family:font1;
-font-size:80px;
-background-color:#FF9E67;
-color:white;
-border-radius:10px;
+{	
+	width: 100%;
+	height: 100%;
+	font-family: font1;
+	font-size: 200%;
+	background-color: #FF9E67;
+	color: white;
+	border-radius: 10px;
 }
 
 #btn:hover
 {
-background-color:#FFFDE3 ;
-color:black;
-cursor:pointer;
+	background-color:#FFFDE3 ;
+	color:black;
+	cursor:pointer;
 
 }
 
 audio
 {
-display:none;
+	display: none;
+}
+
+@media screen and (min-width: 3820px) {
+	p {
+		font-size: 800%;
+	}
+
+	.title {
+		font-size: 1000%;
+	}
+
+	#btn {
+		font-size: 800%;
+	}
+}
+/*
+#lg
+{
+	font-size:50px;
+	font-family:font1;
+	letter-spacing:3px;
+	word-spacing:10px;
+	text-align:center;
 }
 
 .hint
@@ -83,20 +169,6 @@ display:none;
 	margin-bottom:50%;
 }
 
-
-
-#new{
-	margin-left:15%;
-}
-
-
-#dogLogo
-{
-	width:70px;
-	height:70px;
-	margin-bottom:-11px;
-}
-
 #catLogo
 {
 	width:70px;
@@ -104,3 +176,4 @@ display:none;
 	margin-left:3%;
 	margin-bottom:-11px;
 }
+*/
