--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -98,7 +98,7 @@ p {
 }
 
 #handimgcontainer {
-    z-index: 1;
+    z-index: 2;
     margin: auto;
     position: absolute;
     width: 15%;
@@ -115,13 +115,20 @@ p {
     height: 100%;
 }
 
+#backgroundimg {
+    z-index: 0;
+    object-fit: cover;
+    width: 100%;
+    height: auto;
+}
+
 #vcanvas { /* video canvas */
     width: 100%;
     height: auto;
 }
 
 #canvas { /* play region */
-    z-index: 0;
+    z-index: 1;
     position: absolute;
     width: 100%;
     height: auto
@@ -132,7 +139,7 @@ video { /*video used by handtrack.js*/
 }
 
 .splashT { /* loading interface, div that stores loading symbols img */
-    z-index: 2;
+    z-index: 5;
     background-color: white;
     width: 100%;
     height: 100%;
@@ -225,6 +232,7 @@ video { /*video used by handtrack.js*/
     }
 
 .modal { /* summary interface */
+    z-index: 5;
     margin: auto;
     display: none;
     position: absolute; 
