--- a/find-the-invisible-dog/choosecolor.css
+++ b/find-the-invisible-dog/choosecolor.css
@@ -46,6 +46,10 @@ body {
     height: auto;
 }
 
+.imgplaceholder{
+    visibility: hidden;
+}
+
 @font-face {
     font-family: font1;
     src: url(ft1.ttf);
