--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -109,6 +109,10 @@ p {
     */
 }
 
+.imgplaceholder{
+    visibility: hidden;
+}
+
 #handimg {
     object-fit: scale-down;
     width: 100%;
@@ -139,7 +143,7 @@ p {
 }
 
 video { /*video used by handtrack.js*/
-
+    display: none;
 }
 
 .splashT { /* loading interface, div that stores loading symbols img */
