--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -115,6 +115,19 @@ p {
     height: 100%;
 }
 
+#giftimgcontainer {
+    z-index: 2;
+    margin: auto;
+    position: absolute;
+}
+
+#giftimg {
+    display: none;
+    object-fit: scale-down;
+    width: 100%;
+    height: 100%;
+}
+
 #backgroundimg {
     z-index: 0;
     object-fit: cover;
