--- a/find-the-invisible-dog/Assets/invdog.css
+++ b/find-the-invisible-dog/Assets/invdog.css
@@ -1,10 +1,11 @@
-html {
+﻿html {
     height: 100vh; /* viewport height = 100%, adjustment not recommended */
     width: 100vw; /* viewport width = 100%, adjustment not recommended */
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
+    background-image: url(bg-01.png);
     background-size: cover
 }
 
@@ -43,17 +44,7 @@ p {
     height: 100%;
 }
 
-#freeze {
-    position: absolute;
-    display: none;
-    z-index: 4;
-    background-color: aquamarine;
-    opacity: 80%;
-    width: 100%;
-    height: 100%;
-}
-
-#timergui, #basketgui, #vcanvasgui {
+#timergui, #basketgui, #vcanvasgui{
     z-index: 1;
     position: absolute;
     object-fit: scale-down;
@@ -68,7 +59,6 @@ p {
     width: 100%;
     height: auto;
 }
-
 #infocontainer {
     display: flex;
     align-items: center;
@@ -102,7 +92,7 @@ p {
     height: 100%;
 }
 
-#timer {
+#timer{
     z-index: 2;
     position: absolute;
 }
@@ -125,27 +115,26 @@ p {
 }
 
 #handimg {
-    visibility: hidden;
     object-fit: scale-down;
     width: 100%;
     height: 100%;
 }
 
-#hintimgcontainer {
+#giftimgcontainer {
     z-index: 2;
     margin: auto;
     position: absolute;
 }
 
-#hintimg {
+#giftimg {
     display: none;
     object-fit: scale-down;
     width: 100%;
     height: 100%;
 }
-
 /*
 #vcanvas {
+    position: absolute;
     width: 100%;
     height: auto;
     transform: scaleX(-1);
@@ -161,40 +150,11 @@ p {
     height: auto
 }
 */
-
 video { /*video used by handtrack.js*/
+    display: none;
 }
 
-.splashT { /* loading interface, div that stores loading symbols img */
-    z-index: 6;
-    background-color: white;
-    width: 100%;
-    height: 100%;
-
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    /*alternate centering method
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    */
-}
-
-#loading { /* loading symbols */
-    width: 30%;
-    height: 30%;
-}
-
-/*
-#doggy { 
+#doggy { /* div that stores the #dogcenter img */
     z-index: 5;
     margin: auto;
     position: absolute;
@@ -209,7 +169,7 @@ video { /*video used by handtrack.js*/
     text-align: center;
 }
 
-#catty { 
+#catty { /* div that stores the #catcenter img */
     z-index: 5;
     margin: auto;
     position: absolute;
@@ -224,7 +184,7 @@ video { /*video used by handtrack.js*/
     text-align: center;
 }
 
-#hintad { 
+#hintad { /* div that stores the #adimg img */
     z-index: 5;
     margin: auto;
     position: absolute;
@@ -274,79 +234,18 @@ video { /*video used by handtrack.js*/
     width: 30%;
 }
 
-#catchimg { 
+#catchimg { /* dog img */
     display: none;
     height: 30%;
     width: 30%;
 }
 
-#trapimg { 
+#trapimg { /* cat img */
     display: none;
     height: 30%;
     width: 30%;
 }
 
-*/
-.button {
-    text-align: center;
-    box-shadow: 0px 1px 0px 0px #f0f7fa;
-    background: linear-gradient(to bottom, #ff9e67 5%, #ff9e67 100%);
-    background-color: #ff9e67;
-    border-radius: 6px;
-    border: 1px solid #ff9e67;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 100%;
-    font-weight: bold;
-    text-shadow: 0px -1px 0px #5b6178;
-    width: 40%;
-    height: 20%;
-}
-
-    .button:hover {
-        background: linear-gradient(to bottom, #fffde3 5%, #fffde3 100%);
-        background-color: #fffde3;
-        color: black;
-    }
-
-    .button:active {
-        position: relative;
-        top: 1px;
-    }
-
-.modal { /* summary interface */
-    z-index: 6;
-    margin: auto;
-    display: none;
-    position: absolute; 
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0); /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-
-.modal-content { /* summary interface elements */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: #fefefe;
-    margin: auto;
-    border: 1px solid #808080;
-    border-width: 4px 5px 4px 6px;
-    border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
-    transform: rotate(0.85deg);
-    width: 80%;
-    height: 50%;
-}
-
-.tmlogo { /* tmlogo img */
-    width: 10%;
-    height: 10%;
-}
 .animate {
     -webkit-animation: animatezoom 0.6s;
     animation: animatezoom 0.6s;
@@ -373,5 +272,6 @@ video { /*video used by handtrack.js*/
 }
 
 ::-webkit-scrollbar {
+    background: transparent;
     display: none;
 }
