--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -20,7 +20,10 @@ p {
     text-align: center;
 }
 
+/* Containers */
+
 #gui-container { /* a 3x2 grid container */
+    z-index: 0;
     width: 100%;
     height: 100%;
     display: grid;
@@ -29,6 +32,7 @@ p {
 }
 
 .container-item1, .container-item2, .container-item3 { /* timer container */
+    z-index: 1;
     position: relative;
     display: flex;
     align-items: center;
@@ -38,23 +42,28 @@ p {
 }
 
 .container-item4 { /* play region container */
+    z-index: 1;
+    position: relative;
     grid-column: span 3;
     width: 100%;
     height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 #freeze {
+    margin: auto;
     position: absolute;
     display: none;
     z-index: 4;
     background-color: aquamarine;
     opacity: 80%;
-    width: 100%;
-    height: 100%;
 }
 
+/* GUIs */
+
 #timergui, #basketgui, #vcanvasgui {
-    z-index: 1;
+    z-index: 2;
     position: absolute;
     object-fit: scale-down;
     width: 100%;
@@ -62,14 +71,75 @@ p {
 }
 
 #fencegui {
-    z-index: 1;
+    z-index: 2;
     position: absolute;
     object-fit: scale-down;
     width: 100%;
     height: auto;
 }
 
+/* Container 1 */
+
+
+#timer {
+    z-index: 3;
+    position: absolute;
+}
+
+
+/* Container 2 */
+
+
+#basketdoggycontainer {
+    z-index: 3;
+    position: absolute;
+    width: 70%;
+    height: 85%;
+    margin: auto;
+}
+
+.basketdoggy {
+    z-index: 4;
+}
+
+/* Container 3  & Container 4 */
+
+
+#vcanvascontainer {
+    z-index: 4;
+    margin: auto;
+    width: 65%;
+    height: 75%;
+}
+
+#canvascontainer {
+    position: relative;
+    z-index: 4;
+    margin: auto;
+    width: 85%;
+    height: 75%;
+}
+
+#canvas, #vcanvas {
+    z-index: 8;
+    position: absolute;
+}
+
+#guicanvas {
+    z-index: 6;
+    position: absolute;
+}
+
+#vcanvas {
+    transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+}
+/* Container 4 > Info/Ads board*/
+
 #infocontainer {
+    z-index: 3;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -78,7 +148,7 @@ p {
 }
 
 #infoboard {
-    z-index: 2;
+    z-index: 4;
     position: absolute;
     object-fit: contain;
     width: 80%;
@@ -86,74 +156,37 @@ p {
 }
 
 #info {
-    z-index: 3;
+    z-index: 5;
 }
 
-#canvascontainer {
+
+/* Container 4 > Play canvas*/
+
+#targetimgcontainer, #trapimgcontainer, #hintimgcontainer{
+    display: none;
     margin: auto;
-    width: 85%;
-    height: 75%;
+}
+
+#targetimg, #trapimg, #hintimg, #handimg {
+    object-fit: scale-down;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#handimgcontainer{
+    visibility: hidden;
+    position: absolute
 }
 
 #canvasbg {
-    z-index: 2;
+    z-index: 3;
+    position: relative;
     object-fit: contain;
     width: 100%;
     height: 100%;
 }
 
-#timer {
-    z-index: 2;
-    position: absolute;
-}
-
-#canvas, #vcanvas {
-    z-index: 5;
-    position: absolute;
-}
-
-.basketdoggy {
-    z-index: 2;
-    width: 50%;
-    height: 50%;
-}
-
-#handimgcontainer {
-    z-index: 2;
-    margin: auto;
-    position: absolute;
-}
-
-#handimg {
-    visibility: hidden;
-    object-fit: scale-down;
-    width: 100%;
-    height: 100%;
-}
-
-#hintimgcontainer {
-    z-index: 2;
-    margin: auto;
-    position: absolute;
-}
-
-#hintimg {
-    display: none;
-    object-fit: scale-down;
-    width: 100%;
-    height: 100%;
-}
-
 /*
-#vcanvas {
-    width: 100%;
-    height: auto;
-    transform: scaleX(-1);
-    -webkit-transform: scaleX(-1);
-    -moz-transform: scaleX(-1);
-    -o-transform: scaleX(-1);
-}
-
 #canvas {
     z-index: 1;
     position: absolute;
