--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Machine Gunk";
+    src: url("Assets/Font/Machine Gunk.otf") format("opentype");
+}
+
 html {
     height: 100vh; /* viewport height = 100%, adjustment not recommended */
     width: 100vw; /* viewport width = 100%, adjustment not recommended */
@@ -15,8 +20,9 @@ body {
 }
 
 p {
-    font-family: 'Comic Sans MS';
-    font-size: 200%;
+    font-family: 'Machine Gunk';
+    color: #56362C;
+    font-size: calc(1em + 1vw);
     text-align: center;
 }
 
@@ -163,11 +169,14 @@ p {
 /* Container 4 > Play canvas*/
 
 #targetimgcontainer, #trapimgcontainer, #hintimgcontainer{
+    z-index: 6;
+    position: absolute;
     display: none;
-    margin: auto;
 }
 
-#targetimg, #trapimg, #hintimg, #handimg {
+#targetimg, #trapimg, #hintimg, #openinghint {
+    display: none;
+    position: absolute;
     object-fit: scale-down;
     max-width: 100%;
     max-height: 100%;
@@ -178,6 +187,12 @@ p {
     position: absolute
 }
 
+#handimg {
+    object-fit: scale-down;
+    max-width: 100%;
+    max-height: 100%;
+}
+
 #canvasbg {
     z-index: 3;
     position: relative;
@@ -186,14 +201,34 @@ p {
     height: 100%;
 }
 
-/*
-#canvas {
-    z-index: 1;
+#openedhintcontainer {
+    z-index: 9;
+    margin: auto;
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    top: 0;
     width: 100%;
-    height: auto
+    height: 100%;
 }
-*/
+
+#openedhint {
+    display: none;
+    position: absolute;
+    object-fit: scale-down;
+    width: 90%;
+    height: 90%;
+}
+
+#openedhintcontainer p {
+    z-index: 10;
+    display: none;
+    margin: auto;
+    margin-bottom: 30%;
+}
 
 video { /*video used by handtrack.js*/
 }
@@ -226,100 +261,6 @@ video { /*video used by handtrack.js*/
     height: 30%;
 }
 
-/*
-#doggy { 
-    z-index: 5;
-    margin: auto;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
-#catty { 
-    z-index: 5;
-    margin: auto;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
-#hintad { 
-    z-index: 5;
-    margin: auto;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-}
-
-#catty span {
-    margin-top: 2%;
-    background-color: azure;
-    opacity: 80%;
-    font-family: 'Comic Sans MS';
-    font-size: 300%;
-    display: none;
-}
-
-#doggy span {
-    margin-top: 2%;
-    background-color: azure;
-    opacity: 80%;
-    font-family: 'Comic Sans MS';
-    font-size: 300%;
-    display: none;
-}
-
-#hintad span {
-    margin-top: 2%;
-    background-color: azure;
-    opacity: 80%;
-    font-family: 'Comic Sans MS';
-    font-size: 500%;
-    display: none;
-}
-
-#adimg {
-    background-color: azure;
-    opacity: 80%;
-    display: none;
-    height: 30%;
-    width: 30%;
-}
-
-#catchimg { 
-    display: none;
-    height: 30%;
-    width: 30%;
-}
-
-#trapimg { 
-    display: none;
-    height: 30%;
-    width: 30%;
-}
-
-*/
 .button {
     text-align: center;
     box-shadow: 0px 1px 0px 0px #f0f7fa;
@@ -383,26 +324,6 @@ video { /*video used by handtrack.js*/
 .animate {
     -webkit-animation: animatezoom 0.6s;
     animation: animatezoom 0.6s;
-}
-
-@media screen and (min-width: 3820px) {
-    p {
-        font-size: 300%;
-    }
-
-    .button {
-        font-size: 300%;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    p {
-        font-size: 100%;
-    }
-
-    .button {
-        font-size: 100%;
-    }
 }
 
 ::-webkit-scrollbar {
