--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -10,7 +10,7 @@ html {
     justify-content: center;
     align-items: center;
     margin: 0;
-    background-size: cover
+    background-size: cover;
 }
 
 body {
@@ -55,15 +55,6 @@ p {
     height: 100%;
     background-size: contain;
     background-repeat: no-repeat;
-}
-
-#freeze {
-    margin: auto;
-    position: absolute;
-    display: none;
-    z-index: 4;
-    background-color: aquamarine;
-    opacity: 80%;
 }
 
 /* GUIs */
@@ -161,8 +152,12 @@ p {
     height: auto;
 }
 
-#info {
+#infoads {
     z-index: 5;
+    width: 70%;
+    height: 70%;
+    object-fit: contain;
+    box-shadow: 0px 10px 5px grey;
 }
 
 
@@ -201,7 +196,7 @@ p {
     height: 100%;
 }
 
-#openedhintcontainer {
+#messagecontainer {
     z-index: 9;
     margin: auto;
     position: absolute;
@@ -218,16 +213,29 @@ p {
 #openedhint {
     display: none;
     position: absolute;
-    object-fit: scale-down;
-    width: 90%;
-    height: 90%;
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 
-#openedhintcontainer p {
+#hintad {
     z-index: 10;
     display: none;
-    margin: auto;
-    margin-bottom: 30%;
+    position: absolute;
+    object-fit: contain;
+    width: 50%;
+    height: 50%;
+}
+
+#message {
+    font-size: calc(2em + 1vw);
+    z-index: 10;
+    display: none;
+    width: 40%;
+    margin-top: 40%;
+    box-shadow: 10px 10px 5px grey;
+    border-radius: 50%;
+    background-color: transparent;
 }
 
 video { /*video used by handtrack.js*/
