--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -3,7 +3,7 @@
     src: url("Assets/Font/Machine Gunk.otf") format("opentype");
 }
 
-html {
+body {
     height: 100vh; /* viewport height = 100%, adjustment not recommended */
     width: 100vw; /* viewport width = 100%, adjustment not recommended */
     display: flex;
@@ -13,7 +13,7 @@ html {
     background-size: cover;
 }
 
-body {
+main {
     height: 100vmin; /* minimum viewport 100%, can be adjusted */
     width: 100vmin;
     position: relative;
@@ -22,8 +22,21 @@ body {
 p {
     font-family: 'Machine Gunk';
     color: #56362C;
-    font-size: calc(1em + 1vw);
+    font-size: calc(2em + 1vw);
     text-align: center;
+}
+
+#splashscreen {
+    height: 100vmin;
+    width: 100vw;
+    z-index: 20;
+    position: absolute;
+}
+
+#splashscreen > video {
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
 }
 
 /* Containers */
@@ -211,6 +224,7 @@ p {
 }
 
 #openedhint {
+    z-index: 10;
     display: none;
     position: absolute;
     object-fit: contain;
@@ -219,7 +233,7 @@ p {
 }
 
 #hintad {
-    z-index: 10;
+    z-index: 11;
     display: none;
     position: absolute;
     object-fit: contain;
@@ -227,18 +241,25 @@ p {
     height: 50%;
 }
 
-#message {
-    font-size: calc(2em + 1vw);
-    z-index: 10;
+#freezemessage {
+    z-index: 9;
+    color: magenta;
+    font-size: calc(10em + 1vw);
     display: none;
-    width: 40%;
+    margin: auto;
+    position: absolute;
+}
+#hintmessage {
+    z-index: 11;
+    font-size: calc(2em + 1vw);
+    display: none;
     margin-top: 40%;
+    position: absolute;
+    /*
     box-shadow: 10px 10px 5px grey;
     border-radius: 50%;
     background-color: transparent;
-}
-
-video { /*video used by handtrack.js*/
+    */
 }
 
 .splashT { /* loading interface, div that stores loading symbols img */
@@ -336,4 +357,68 @@ video { /*video used by handtrack.js*/
 
 ::-webkit-scrollbar {
     display: none;
+}
+
+#blackscreen {
+    z-index: 8;
+    top: 0;
+    left: 0;
+    display: none;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    opacity: 0.8;
+}
+@media screen and (min-width: 2500px) {
+    p {
+        font-size: calc(5em + 1vw);
+    }
+    #freezemessage {
+        font-size: calc(15em + 1vw);
+    }
+}
+
+@media screen and (max-width: 1920px) {
+    #freezemessage {
+        font-size: calc(7em + 1vw);
+    }
+}
+
+@media screen and (max-width: 800px) {
+    #freezemessage {
+        font-size: calc(5em + 1vw);
+    }
+    p {
+        font-size: calc(1em + 1vw);
+    }
+}
+
+@media screen and (max-width: 400px) {
+    #freezemessage {
+        font-size: calc(3em + 1vw);
+    }
+}
+
+
+@media screen and (max-height: 1900px) {
+    #freezemessage {
+        font-size: calc(7em + 1vw);
+    }
+}
+
+@media screen and (max-height: 800px) {
+    #freezemessage {
+        font-size: calc(5em + 1vw);
+    }
+
+    p {
+        font-size: calc(1em + 1vw);
+    }
+}
+
+@media screen and (max-height: 400px) {
+    #freezemessage {
+        font-size: calc(3em + 1vw);
+    }
 }
