--- a/find-the-invisible-dog/stylegame.css
+++ b/find-the-invisible-dog/stylegame.css
@@ -57,14 +57,17 @@ p {
     background-repeat: no-repeat;
 }
 
-/* GUIs */
-
 #timergui, #basketgui, #vcanvasgui {
     z-index: 2;
     position: absolute;
     object-fit: scale-down;
     width: 100%;
     height: 100%;
+}
+
+#doganimate{
+    z-index: 10;
+    position: absolute;
 }
 
 #fencegui {
@@ -75,17 +78,10 @@ p {
     height: auto;
 }
 
-/* Container 1 */
-
-
 #timer {
     z-index: 3;
     position: absolute;
 }
-
-
-/* Container 2 */
-
 
 #basketdoggycontainer {
     z-index: 3;
