Responsive paddle, fixed slow items dropdown speed

--- a/e-motion/canvas.css
+++ b/e-motion/canvas.css
@@ -1,5 +1,8 @@
-*{ height: auto;
-    margin: auto;}
+*{ 
+    height: auto;
+    margin: auto;
+    object-fit: scale-down;
+}
 body {
   margin: 0;
   padding: 0;
